# https://pypi.org/project/setupcfg-generator/
[metadata]
name = kill-child-processes
version = 2019.4.13
url = https://github.com/looking-for-a-job/kill-child-processes
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kill

[options]
install_requires = 
	setuptools
scripts = 
	scripts/kill-child-processes
